--- a/client/src/styles/pages/_knowledges.scss
+++ b/client/src/styles/pages/_knowledges.scss
@@ -11,6 +11,11 @@
       "L E E"
       "O O H";
 
+
+    a {
+      margin-left: 5px;
+    }
+
     .languagesFrameworks, .experience, .otherSkills, .hobbies {
       background: $color-2;
       border-radius: $borderRadius;
